2013-05-21  Olaf Bergmann  <bergmann@tzi.org>

	* net.c: Changed various functions to pass the local interface
	using the new coap_endpoint_t abstraction. The coap_context_t now
	does not know anything about the read/write implementation
	anymore. A callback function can be registered with a
	coap_context_t object to modify the send function. Received
	messages now are passed to libcoap using coap_handle_message().

	* coap_io.c: network I/O functions

	* coap_io.h: definition of virtual endpoint

2013-02-01  Olaf Bergmann  <bergmann@tzi.org>

	* coap_time.h (coap_clock_init_impl): fix invalid preprocessor
	directive. #warning is now only used for gcc only (close sf bug #15)

	* net.c (wellknown_response): applied patch from chrysn to
	fix bug in generation of .well-known/core representation

2013-01-21  Olaf Bergmann  <bergmann@tzi.org>

	* option.h: renamed option field in coap_opt_iterator_t to
	next_option to detect erroneous use in old code

2013-01-18  Olaf Bergmann  <bergmann@tzi.org>

	* configure.in: new option --with-tests to enable unit tests

	* tests/testdriver.c: unit tests for parser functions

	* pdu.c (coap_pdu_parse): new PDU parser for Klaus-encoding
	according to coap-13

	* net.c (coap_read): call coap_pdu_parse() to check PDU integrity

	* option.c: Klaus-encoding for coap-13, including new option
	iterator interface

2012-11-20  Olaf Bergmann  <bergmann@tzi.org>

	* net.c (next_option_safe): made option parsing more robust in
	presence of option jumps

	* pdu.h: new option codes from draft-ietf-core-coap-12

	* option.c (coap_opt_setlength): new function to set option length

	* uri.c (make_decoded_option): use coap_opt_setlength() instead of
	obsolete macro COAP_OPT_SETLENGTH.

2012-11-19  Olaf Bergmann  <bergmann@tzi.org>

	* uri.c (make_decoded_option): use coap_opt_encode() instead of writing

2012-11-03  Olaf Bergmann  <bergmann@tzi.org>

	* net.c (coap_read): read new option encoding

2012-11-01  Olaf Bergmann  <bergmann@tzi.org>
